[package]
name = "mcb-validate"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Architecture validation for MCP Context Browser workspace"
# Disable auto-discovery of benchmarks (bench files exist but are work-in-progress)
autobenches = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Rust AST parsing
syn.workspace = true
proc-macro2.workspace = true

# File traversal and globbing
walkdir.workspace = true
glob.workspace = true
globset.workspace = true

# No external dependencies needed - using simplified detection

# Pattern matching
regex.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

# TOML parsing for Cargo.toml
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Date/time for timestamps
chrono.workspace = true

# CLI (optional)
clap = { workspace = true, optional = true }

# Rule Engines - Core do sistema
rust-rule-engine.workspace = true
rusty-rules.workspace = true
evalexpr.workspace = true

# Validation libraries - Para estruturas e campos
validator = { workspace = true, features = ["derive"] }
garde.workspace = true

# JSON Schema validation - Para validar regras YAML
jsonschema.workspace = true

# Pest parser - Para DSL avançada
pest.workspace = true
pest_derive.workspace = true

# JSON Path - Para navegação complexa
jsonpath-rust.workspace = true

# Lazy static values
once_cell.workspace = true

# Code metrics analysis - using rust-code-analysis fork with tree-sitter 0.26.3 + Kotlin
rust-code-analysis.workspace = true

# Tree-sitter for AST parsing
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true

# Async traits
async-trait.workspace = true
tokio.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
cli = ["clap"]

# Binary will be added when CLI feature is implemented
# [[bin]]
# name = "mcb-validate"
# required-features = ["cli"]
