[package]
name = "mcb"
version = "0.1.4"
edition = "2024"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
license = "MIT"
keywords = ["mcp", "semantic-search", "code-analysis", "vector-embeddings"]
categories = ["development-tools", "api-bindings", "science::artificial-intelligence"]
description = "MCP Context Browser - A Model Context Protocol server for semantic code analysis using vector embeddings"
readme = "README.md"
repository = "https://github.com/marlonsc/mcb"
homepage = "https://github.com/marlonsc/mcb"
rust-version = "1.89"

[lib]
name = "mcb"
path = "src/lib.rs"

[[bin]]
name = "mcb"
path = "src/main.rs"

[dependencies]
# Domain layer - re-exported for public API
mcb-domain = { path = "../mcb-domain" }

# Server layer - re-exported for run_server entry point
mcb-server = { path = "../mcb-server" }

# Infrastructure layer - re-exported for DI container
mcb-infrastructure = { path = "../mcb-infrastructure" }

# Providers - MUST be in dependencies (not dev-dependencies) for linkme inventory registration
mcb-providers = { path = "../mcb-providers", features = ["full"] }

# Core async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Re-export for doc examples
serde_json = { workspace = true }

# Re-export key domain types for convenience
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]