[package]
name = "mcp-context-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Model Context Protocol server for semantic code analysis using vector embeddings"
homepage = "https://github.com/marlonsc/mcp-context-browser"
documentation = "https://github.com/marlonsc/mcp-context-browser#readme"
readme = "README.md"
exclude = ["target/", "*.bak", ".git/", ".gitignore", "Makefile"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15"

# HTTP client for embeddings API
reqwest = { version = "0.13", features = ["json", "__tls"] }

# Redis for rate limiting and caching
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Cryptography for encryption at rest
aes-gcm = "0.10"
rand = "0.8"

# Shell expansion for paths
shellexpand = "3.1"

# Authentication and crypto
jsonwebtoken = "9.0"
base64 = "0.22"
seahash = "4.1"

# Database connection pooling
r2d2 = "0.8"
r2d2_postgres = "0.18"

# File system operations
walkdir = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File locking for sync coordination (v0.0.3)
fs2 = "0.4"

# Hostname detection for lock metadata
hostname = "0.4"

# Hashing for snapshots
sha2 = "0.10"

# Utilities
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.20"
lazy_static = "1.5"
dirs = "6.0"

# HTTP server for metrics API (v0.0.3)
axum = "0.8"
tower = { version = "0.5", features = ["load-shed", "limit", "load", "retry", "timeout", "util"] }
tower-http = { version = "0.6", features = ["cors"] }

# System metrics collection (v0.0.3)
sysinfo = "0.37"
nix = { version = "0.30", features = ["fs"] }

# Code analysis and AST parsing
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"

# Fast globbing
glob = "0.3"

# Git ignore parsing
ignore = "0.4"

# Concurrent processing
futures = "0.3"
rayon = "1.8"

# Text processing
unicode-segmentation = "1.12"
milvus-sdk-rust = "0.1.0"
async-trait = "0.1.89"
downcast-rs = "2.0.2"
futures-util = "0.3.31"

# Schema generation for MCP
schemars = "1.0"

# TOML configuration support (for schema validation like Claude Context)
toml = "0.9"

# MCP SDK
rmcp = { version = "0.12.0", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }

# Advanced Multi-Provider Strategy (v0.0.4)
# Circuit Breaker Pattern
governor = "0.10"
# Metrics and Observability
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
# Distributed Tracing
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-jaeger = "0.22"
# Advanced async utilities
tokio-util = { version = "0.7", features = ["time"] }
# Cost tracking and rate limiting
dashmap = "6.0"
# Health checks
health = "0.2"
# EdgeVec high-performance vector database
edgevec = "0.7"

[[example]]
name = "config_demo"
path = "examples/config_demo.rs"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.4"