[package]
name = "mcb-mcb-tree-sitter-analysis"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Unified AST analysis library for semantic code analysis"
authors = ["Marlon Costa <marlonsc@gmail.com>"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tree-sitter = "0.26"

# Language parsers (existing from MCB)
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

[features]
analysis = []

[dev-dependencies]
tempfile = "3.10"
